tests/paczka1/small_fuzzy/51831926.err
Error in line 1: azqOGn S147 56,1
Error in line 4: azqOGn A801 46,8
Error in line 12: S147 S216 37,7
